--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
       - mail_password=${mail_password}
       - app_params=${app_params}
     deploy:
-      resources:
-        limits:
-          memory: 1024M
+      # resources:
+      #   limits:
+      #     memory: 1024M
       replicas: 1
       restart_policy:
         condition: on-failure
